changed title document

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 
-    <title>Document</title>
+    <title>Giphy Project</title>
 </head>
 <body>
     <div id="search">
